# backend-rust-learning-app

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  DETAILED_IMPROVEMENT_TODOS.md  Dockerfile  Makefile  README.md  clippy.toml  docker-compose.yml  env.example  rustfmt.toml
.github/workflows/: ci.yml
migrations/: 0002_add_user_progress_json_columns.sql  001_initial_schema.sql
scripts/: dev.sh  pre-commit  setup-dev.sh
src/: lib.rs  main.rs  test_mock_isolated.rs
src/application/: mod.rs  state.rs
src/application/dtos/: auth_dtos.rs  content_dtos.rs  mod.rs  progress_dtos.rs
src/application/interfaces/: auth_interface.rs  content_interface.rs  mod.rs  progress_interface.rs
src/application/use_cases/: auth_use_cases.rs  content_use_cases.rs  mod.rs  progress_use_cases.rs  simple_tests.rs  tests.rs
src/domain/: mod.rs
src/domain/entities/: code_practice.rs  leaderboard_entry.rs  lesson.rs  mod.rs  notification.rs  question.rs  topic.rs  user.rs  user_progress.rs
src/domain/repositories/: code_practice_repository.rs  leaderboard_repository.rs  lesson_repository.rs  mod.rs  notification_repository.rs  question_repository.rs  topic_repository.rs  user_progress_repository.rs  user_repository.rs
src/domain/services/: auth_service.rs  leaderboard_service.rs  mod.rs  notification_service.rs  progress_service.rs
src/domain/value_objects/: code_practice_id.rs  difficulty.rs  email.rs  lesson_id.rs  localized_text.rs  mod.rs  notification_id.rs  password.rs  points.rs  question_id.rs  topic_id.rs  user_id.rs
src/infrastructure/: mod.rs
src/presentation/: mod.rs
src/shared/: mod.rs
templates/: base.html  dashboard.html
(+64 files in other folders)
